--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,7 @@ a {
   color: #2e2f42;
 }
 
-.nav-list,
-.header-contact,
-.advan-list,
-.work-list,
-.team-list {
+ul {
   list-style: none;
 }
 :root {
@@ -90,24 +86,15 @@ a {
 }
 
 .hero {
-  width: 1440px;
-  height: 600px;
-  left: 0px;
-  top: 72px;
-
-  /* NAVY BLUE */
-
   background: #2e2f42;
 }
 .button {
-  position: absolute;
   cursor: pointer;
 
   border: none;
 
   background-color: #f4f4fd;
   color: #4d5ae5;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 .main-list {
