--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,33 @@
 body {
   text-decoration: none;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
 }
 a {
   text-decoration: none;
 }
 .main-button {
-  background: #4d5ae5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
   color: #ffffff;
+  cursor: pointer;
+}
+.main-button:hover {
+  background-color: #404bbf;
+}
+.main-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 /* Фоотер */
@@ -19,10 +39,16 @@ a {
 }
 /* Лого */
 .logo {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 .logo-footer {
-  color: #f4f4fd;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 .top-header > nav {
@@ -69,12 +95,9 @@ a {
 .main-title {
   font-weight: 700;
   font-size: 56px;
-  line-height: 60px;
-  /* or 107% */
-
+  text-align: center;
+  line-height: 1.07;
   letter-spacing: 0.02em;
-
-  /* WHITE */
 
   color: #ffffff;
 }
@@ -93,4 +116,49 @@ a {
 }
 .main-list {
   list-style: none;
+}
+
+.list-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.list-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.work-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  /* identical to box height, or 111% */
+
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+
+  /* NAVY BLUE */
+
+  color: #2e2f42;
+}
+.team-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  /* identical to box height, or 111% */
+
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+
+  /* NAVY BLUE */
+
+  color: #2e2f42;
 }
