--- a/css/style.css
+++ b/css/style.css
@@ -7,55 +7,31 @@ body {
 a {
   text-decoration: none;
 }
-.main-button {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  background-color: #4d5ae5;
-  color: #ffffff;
-  cursor: pointer;
-}
-.main-button:hover {
-  background-color: #404bbf;
-}
-.main-logo {
-  font-family: "Raleway", sans-serif;
+.logo {
+  font-family: "Raleway";
+  font-style: normal;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1.17;
+  line-height: 21px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  /* IRIS */
+
   color: #4d5ae5;
 }
-
-/* Фоотер */
-.footer {
-  background-color: #2e2f42;
-}
-.footer-text {
-  color: #f4f4fd;
-}
-/* Лого */
-.logo {
+.logo-style {
   color: #2e2f42;
 }
-.logo-footer {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
+.list {
+  list-style: none;
 }
-
-.top-header > nav {
+.list-nav {
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  /* identical to box height, or 150% */
 
   letter-spacing: 0.02em;
 
@@ -64,70 +40,80 @@ a {
   color: #2e2f42;
 }
 
-:root {
-  --color-link: #4d5ae5;
-  --color-btn: #404bbf;
-}
+.list-address {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
 
-.button:hover,
-:focus {
-  background-color: var(--color-btn);
-  color: #f4f4fd;
-}
+  letter-spacing: 0.02em;
 
-/* Ссылки  */
-.link {
+  /* SLATE */
+
   color: #434455;
 }
-.link:hover {
-  color: var(--color-link);
-}
-.link:active {
-  color: #404bbf;
-}
-
-.list {
-  list-style: none;
-}
-.team {
-  background-color: #f4f4fd;
+.hero {
+  background-color: #2e2f42;
 }
 .main-title {
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 700;
   font-size: 56px;
+  line-height: 60px;
+  /* or 107% */
+
   text-align: center;
-  line-height: 1.07;
   letter-spacing: 0.02em;
+
+  /* WHITE */
 
   color: #ffffff;
 }
+.main-button {
+  background-color: #4d5ae5;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
 
-.hero {
-  background: #2e2f42;
-}
-.button {
+  letter-spacing: 0.04em;
+
+  /* WHITE */
+
+  color: #ffffff;
   cursor: pointer;
-
-  border: none;
-
-  background-color: #f4f4fd;
-  color: #4d5ae5;
-  border-radius: 4px;
 }
-.main-list {
-  list-style: none;
-}
-
 .list-title {
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 24px;
+  /* identical to box height, or 120% */
+
   letter-spacing: 0.02em;
+
+  /* NAVY BLUE */
+
   color: #2e2f42;
 }
 .list-text {
-  line-height: 1.5;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+
   letter-spacing: 0.02em;
+
+  /* SLATE */
+
   color: #434455;
 }
 .work-title {
@@ -146,7 +132,10 @@ a {
 
   color: #2e2f42;
 }
-.team-title {
+.team {
+  background-color: #f4f4fd;
+}
+.our-team {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -161,4 +150,45 @@ a {
   /* NAVY BLUE */
 
   color: #2e2f42;
+}
+.footer {
+  background-color: #2e2f42;
+}
+.logo-styles {
+  color: #f4f4fd;
+}
+.footer-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* or 150% */
+
+  letter-spacing: 0.02em;
+
+  /* CLOUD */
+
+  color: #f4f4fd;
+}
+.button {
+  background-color: #f4f4fd;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
+
+  letter-spacing: 0.04em;
+
+  /* IRIS */
+
+  color: #4d5ae5;
+  border: none;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #404bbf;
+  color: #ffffff;
 }
