--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,9 @@ a {
 }
 .list {
   list-style: none;
+  color: #434455;
 }
+
 .list-team {
   background-color: #ffffff;
 }
@@ -54,6 +56,9 @@ a {
 }
 .link:hover,
 :focus {
+  color: #404bbf;
+}
+.link:focus {
   color: #404bbf;
 }
 .address {
@@ -117,7 +122,7 @@ a {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
   /* identical to box height, or 120% */
 
   letter-spacing: 0.02em;
@@ -131,7 +136,7 @@ a {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   /* or 150% */
 
   letter-spacing: 0.02em;
@@ -199,7 +204,7 @@ a {
 .button {
   font-family: "Roboto", sans-serif;
   background-color: #f4f4fd;
-  font-family: "Roboto";
+
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
