--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,13 @@ a {
 :root {
   --color-hh: #4d5ae5;
 }
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
 
-  /* IRIS */
-
-  color: #4d5ae5;
-}
 .link {
   text-decoration: none;
   color: #2e2f42;
+}
+.link-address {
+  color: #434455;
 }
 .logo-style {
   color: #2e2f42;
@@ -69,6 +61,9 @@ a {
 :focus {
   color: #404bbf;
 }
+.link-address {
+  color: #434455;
+}
 .list-address {
   font-family: "Roboto";
   font-style: normal;
@@ -102,20 +97,22 @@ a {
   color: #ffffff;
 }
 .main-button {
-  background-color: var(--color-hh);
+  background-color: #4d5ae5;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-
   letter-spacing: 0.04em;
-
   color: #ffffff;
   cursor: pointer;
 }
-.main-button:focus {
+.main-button:focus,
+:hover {
   background-color: #404bbf;
+}
+.team-li {
+  background-color: #ffffff;
 }
 .list-title {
   font-family: "Roboto";
@@ -226,4 +223,23 @@ a {
 }
 .button:focus {
   background-color: #404bbf;
+}
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-hh);
+  color: #4d5ae5;
+}
+.logo-footer {
+  color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
