--- a/css/style.css
+++ b/css/style.css
@@ -116,11 +116,8 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  /* or 150% */
 
   letter-spacing: 0.02em;
-
-  /* SLATE */
 
   color: #434455;
 }
@@ -237,5 +234,8 @@ a {
   color: #434455;
 }
 .link-address {
+  color: #434455;
+}
+.link-adr {
   color: #434455;
 }
