--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ img {
   width: 1158px;
   margin-right: auto;
   margin-left: auto;
+  padding: 0 15px;
 }
 
 body {
@@ -36,6 +37,7 @@ body {
   align-items: center;
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
 }
 .header-container {
   display: flex;
@@ -68,7 +70,11 @@ a {
   list-style: none;
   color: #434455;
 }
+.list-header {
+  padding: 24px 0;
+}
 .list-advantages {
+  gap: 24px;
   padding-top: 137px;
   display: flex;
   flex-direction: column;
@@ -76,15 +82,19 @@ a {
 
   gap: 8px;
 }
+.advantages {
+  padding: 120px 0;
+}
 
 .list-nav {
   display: flex;
   align-items: center;
-  column-gap: 40px;
+
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
+  gap: 40px;
   line-height: 24px;
 
   letter-spacing: 0.02em;
@@ -120,12 +130,14 @@ a {
 .hero {
   background-color: #2e2f42;
   min-height: 600px;
+  padding: 188px 0;
 }
 .main-title {
   padding-top: 188px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
+  max-width: 496px;
   font-size: 56px;
   line-height: 60px;
   /* or 107% */
@@ -139,7 +151,11 @@ a {
 }
 
 .main-button {
-  width: 169px;
+  display: block;
+
+  min-width: 169px;
+  border: none;
+  border-radius: 4px;
   height: 56px;
   background-color: #4d5ae5;
   font-family: "Roboto", sans-serif;
@@ -161,11 +177,15 @@ a {
   align-items: center;
   margin-bottom: 120px;
   margin-top: 72px;
+  gap: 24px;
 }
 .list-title {
+  margin-bottom: 8px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
+  text-align: center;
+  margin-bottom: 8px;
 
   font-size: 20px;
   line-height: 1.2;
@@ -177,11 +197,15 @@ a {
 
   color: #2e2f42;
 }
+.list-menu {
+  width: calc((100% - 72px) / 4);
+}
 .list-text {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
+  text-align: center;
   line-height: 1.5;
 
   letter-spacing: 0.02em;
@@ -195,6 +219,7 @@ a {
   font-size: 36px;
   line-height: 1.11;
   padding-top: 120px;
+  margin-bottom: 72px;
   /* identical to box height, or 111% */
 
   text-align: center;
@@ -206,19 +231,29 @@ a {
 
   color: #2e2f42;
 }
+.work {
+  padding-bottom: 120px;
+}
+.work-li {
+  width: calc((100% - 48px) / 3);
+}
 .list-work {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   flex-wrap: nowrap;
+  gap: 24px;
 }
 
 .team {
   background-color: #f4f4fd;
   min-height: 732px;
+  padding: 120px 0;
 }
 .team-li {
   margin-right: 24px;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 .list-text {
   margin-top: 8px;
@@ -229,6 +264,7 @@ a {
   justify-content: center;
   align-items: center;
   margin-top: 32px;
+  padding: 32px 16px;
 }
 .wrapper-link {
   display: flex;
@@ -248,6 +284,7 @@ a {
   font-size: 36px;
   line-height: 1.11;
   padding-top: 120px;
+  margin-bottom: 72px;
   /* identical to box height, or 111% */
 
   text-align: center;
@@ -259,6 +296,7 @@ a {
   color: #2e2f42;
 }
 .footer {
+  padding: 100px 0;
   background-color: #2e2f42;
   min-height: 312px;
 }
@@ -289,9 +327,12 @@ a {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
   /* identical to box height, or 150% */
 
   letter-spacing: 0.04em;
+  border-radius: 4px;
 
   /* IRIS */
 
@@ -303,9 +344,11 @@ a {
 :focus {
   background-color: #404bbf;
   color: #ffffff;
+  border: 1px solid transparent;
 }
 .button:focus {
   background-color: #404bbf;
+  border: 1px solid transparent;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -314,6 +357,7 @@ a {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
   color: var(--color-hh);
   color: #4d5ae5;
 }
@@ -326,13 +370,15 @@ a {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .list-address {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-right: 40px;
+  gap: 40px;
 
   font-style: normal;
   font-weight: 400;
@@ -354,6 +400,8 @@ a {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 24px;
+  margin-bottom: 72px;
 }
 .button-list {
   margin-right: 24px;
@@ -364,4 +412,9 @@ a {
   flex-wrap: wrap;
   margin-top: 72px;
   margin-bottom: 120px;
+  gap: 24px;
+  margin-bottom: 72px;
+}
+.main-nav {
+  padding: 96px 0 120px;
 }
