--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ a {
   margin-top: 48px;
   text-decoration: none;
   color: #2e2f42;
+  margin-top: 48px;
 }
 
 .logo-style {
@@ -275,6 +276,7 @@ a {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
 }
 
 .our-team {
@@ -414,6 +416,11 @@ a {
   margin-bottom: 120px;
   gap: 24px;
   margin-bottom: 72px;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.link-partfolio {
+  width: calc((100% - 48px) / 3);
 }
 .main-nav {
   padding: 96px 0 120px;
